--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DISCORD_TOKEN = MTIxNTMxMDU0OTM0OTMxMDU1NA.G5HCGK.q0_qkONjUoZdMHxgJMwfZW1W1JDmvK8KnvxUdE
+DISCORD_TOKEN = token
 SERVER_ID = Roadblocks Jailbrokey
